--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,1 +1,155 @@
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+}
 
+html, body {
+    margin: 0;
+    padding: 0;
+    border: none;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+}
+
+.wrapper {
+    margin: 0 auto;
+    width: -webkit-calc(100% - 50px);
+    width: calc(100% - 50px);
+}
+
+.title {
+    margin: 1rem;
+    padding: 0.5rem;
+    text-align: center;
+}
+
+.title > span {
+    color: #000;
+    font-weight: bold;
+    font-size: 25px;
+    letter-spacing: 1px;
+}
+
+.container {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    margin-top: 1.5rem;
+}
+
+.card {
+    border: 3px solid #000;
+    margin: 0.5rem;
+    -webkit-box-flex: 1;
+    -webkit-flex-grow: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+    background: #ddd;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+}
+
+.card > .header {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+    -webkit-justify-content: flex-end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+}
+
+.card > .header > .category {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    padding: 0.5rem;
+    border-left: 3px solid #000;
+    border-bottom: 3px solid #000;
+    text-align: center;
+}
+
+.card > .header > .category > span {
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: 1.5px;
+}
+
+.card > .content {
+    padding: 0.7rem;
+    font-size: 18px;
+}
+
+.col1 {
+    color: #000;
+    background: CadetBlue;
+}
+
+.col2 {
+    color: #fff;
+    background: #DC143C;
+}
+
+.col3 {
+    color: #000;
+    background: #F0E68C;
+}
+
+
+
+
+/* Стили для десктопной версии */
+@media screen and (min-width: 991px) {
+    .card {
+        width: -webkit-calc(100% / 3.2);
+        width: calc(100% / 3.2);
+    }
+    .card > .header > .category {
+        min-width: -webkit-calc(100% / 2);
+        min-width: calc(100% / 2);
+    }
+}
+
+/* Стили для планшетной версии */
+@media screen and (min-width: 768px) and (max-width: 991px) {
+    .card {
+        width: -webkit-calc(100% / 2.1);
+        width: calc(100% / 2.1);
+    }
+    .card > .header > .category {
+        min-width: 200px;
+    }
+}
+
+/* Стили для мобильной версии  */
+@media screen and (max-width: 767px) {
+    .card {
+        width: 100%;
+    }
+    .card > .header > .category {
+        min-width: -webkit-calc(100% / 2);
+        min-width: calc(100% / 2);
+    }
+}
+.example {
+    display: -ms-grid;
+    display: grid;
+    -webkit-transition: all .5s;
+    -o-transition: all .5s;
+    transition: all .5s;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+    background: -webkit-gradient(linear, left top, left bottom, from(white), to(black));
+    background: -o-linear-gradient(top, white, black);
+    background: linear-gradient(to bottom, white, black);
+}
